@startuml db_schema
!theme plain
skinparam linetype ortho
skinparam roundcorner 8
skinparam shadowing false
skinparam defaultFontName Helvetica
skinparam defaultFontSize 12

skinparam class {
    BackgroundColor White
    BorderColor #444444
    HeaderBackgroundColor #2C6E9E
    HeaderFontColor White
    HeaderFontStyle bold
}

skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #F9A825
}

' ─────────────────────────────────────────────
'  ENUMS
' ─────────────────────────────────────────────

enum Role <<enum>> {
    INVESTIGADOR
    ADMIN
}

enum Day <<enum>> {
    DAY1
    DAY2
}

enum JobStatus <<enum>> {
    QUEUED
    RUNNING
    DONE
    FAILED
}

enum PipelineStage <<enum>> {
    PREPROCESSING
    ROI_DETECTION
    TRACKING
    CLASSIFICATION
    DONE
}

enum ReportFormat <<enum>> {
    PDF
    CSV
}

enum NotificationType <<enum>> {
    ANALYSIS_DONE
    ANALYSIS_FAILED
    VIDEO_EXPIRING
    VIDEO_DELETED
}

' ─────────────────────────────────────────────
'  TABLAS
' ─────────────────────────────────────────────

entity "users" as users {
    * id : INTEGER <<PK>>
    --
    * email : VARCHAR(255) <<UNIQUE>>
    * password_hash : VARCHAR(255)
    * name : VARCHAR(120)
    * role : Role
    * is_active : BOOLEAN = true
    * must_change_password : BOOLEAN = false
    * created_at : DATETIME
    last_login : DATETIME
}

entity "experiments" as experiments {
    * id : INTEGER <<PK>>
    --
    * user_id : INTEGER <<FK→users>>
    * created_at : DATETIME
    * name : VARCHAR(120)
    experiment_date : DATETIME
    treatment : VARCHAR(255)
    species : VARCHAR(120)
    * layout : VARCHAR(20) = 'auto'
    notes : TEXT
}

note right of experiments
  layout: fuente de verdad para
  disposición espacial del pipeline.
  analysis_configs NO duplica este campo.
end note

entity "subjects" as subjects {
    * id : INTEGER <<PK>>
    --
    * experiment_id : INTEGER <<FK→experiments>>
    * rat_idx : INTEGER
    label : VARCHAR(50)
    --
    <<UNIQUE (experiment_id, rat_idx)>>
}

note right of subjects
  Fuente UNICA de rat_idx.
  Ni animals ni rois duplican este campo;
  ambos referencian subject_id via FK.
  Permite trazar la misma rata entre
  DAY1 y DAY2.
end note

entity "videos" as videos {
    * id : INTEGER <<PK>>
    --
    * experiment_id : INTEGER <<FK→experiments>>
    * created_at : DATETIME
    * day : Day
    * filename : VARCHAR(255)
    * path : VARCHAR(512)
    duration_s : FLOAT
    deletion_date : DATETIME
    --
    <<UNIQUE (experiment_id, day)>>
    <<CHECK: deletion_date > created_at>>
}

entity "rois" as rois {
    * id : INTEGER <<PK>>
    --
    * video_id : INTEGER <<FK→videos>>
    * subject_id : INTEGER <<FK→subjects>>
    * x : INTEGER
    * y : INTEGER
    * w : INTEGER
    * h : INTEGER
    --
    <<UNIQUE (video_id, subject_id)>>
}

note right of rois
  Referencia subject_id (no rat_idx)
  para mantener posicion sincronizada
  con identidad del animal via FK.
end note

entity "analysis_configs" as analysis_configs {
    * id : INTEGER <<PK>>
    --
    * created_at : DATETIME
    * model_name : VARCHAR(120)
    * model_hash : VARCHAR(64)
    * pipeline_version : VARCHAR(30)
    * conf_threshold : FLOAT
    * skip_seconds : FLOAT = 0.0
    * immobile_thr : FLOAT = 6.5
    * disp_thr : FLOAT = 8.0
    * pos_std_thr : FLOAT = 20.0
    * climb_aspect_thr : FLOAT = 1.6
}

note right of analysis_configs
  model_hash: SHA-256 de los weights.
  Reproducibilidad exacta, no solo nombre.
  layout NO se duplica aqui; autoridad
  es experiments.layout.
end note

entity "jobs" as jobs {
    * id : INTEGER <<PK>>
    --
    * video_id : INTEGER <<FK→videos>>
    config_id : INTEGER <<FK→analysis_configs>>
    * created_at : DATETIME
    started_at : DATETIME
    finished_at : DATETIME
    * status : JobStatus = QUEUED
    stage : PipelineStage
    * progress_pct : INTEGER = 0
    error : TEXT
}

entity "animals" as animals {
    * id : INTEGER <<PK>>
    --
    * job_id : INTEGER <<FK→jobs>>
    * subject_id : INTEGER <<FK→subjects>>
    --
    <<UNIQUE (job_id, subject_id)>>
}

note right of animals
  rat_idx ELIMINADO.
  Posicion via: animal.subject.rat_idx
  Cero duplicidad conceptual.
end note

entity "behavior_results" as behavior_results {
    * id : INTEGER <<PK>>
    --
    * animal_id : INTEGER <<FK→animals>>
    * swim_s : FLOAT = 0.0
    * immobile_s : FLOAT = 0.0
    * escape_s : FLOAT = 0.0
    * total_analyzed_s : FLOAT = 0.0
    --
    <<CHECK: swim_s >= 0 AND immobile_s >= 0>>
    <<        AND escape_s >= 0>>
    <<CHECK: swim_s + immobile_s + escape_s>>
    <<        <= total_analyzed_s + 0.01>>
}

entity "behavior_per_minute" as behavior_per_minute {
    * id : INTEGER <<PK>>
    --
    * animal_id : INTEGER <<FK→animals>>
    * minute : INTEGER
    * swim_s : FLOAT = 0.0
    * immobile_s : FLOAT = 0.0
    * escape_s : FLOAT = 0.0
    --
    <<UNIQUE (animal_id, minute)>>
}

entity "reports" as reports {
    * id : INTEGER <<PK>>
    --
    * experiment_id : INTEGER <<FK→experiments>>
    * created_at : DATETIME
    * format : ReportFormat
    * path : VARCHAR(512)
}

entity "notifications" as notifications {
    * id : INTEGER <<PK>>
    --
    * user_id : INTEGER <<FK→users>>
    * created_at : DATETIME
    * type : NotificationType
    * message : TEXT
    * is_read : BOOLEAN = false
    * experiment_id : INTEGER <<FK→experiments>>
}

note right of notifications
  experiment_id: NOT NULL.
  Todos los NotificationType actuales
  requieren experimento asociado.
end note

' ─────────────────────────────────────────────
'  RELACIONES
' ─────────────────────────────────────────────

users               ||--o{ experiments         : "user_id"
users               ||--o{ notifications       : "user_id"

experiments         ||--o{ videos              : "experiment_id"
experiments         ||--o{ subjects            : "experiment_id"
experiments         ||--o{ reports             : "experiment_id"
experiments         ||--o{ notifications       : "experiment_id"

videos              ||--o{ jobs                : "video_id"
videos              ||--o{ rois                : "video_id"

subjects            ||--o{ animals             : "subject_id"
subjects            ||--o{ rois                : "subject_id"

analysis_configs    ||--o{ jobs                : "config_id"

jobs                ||--o{ animals             : "job_id"

animals             ||--o{ behavior_results    : "animal_id"
animals             ||--o{ behavior_per_minute : "animal_id"

' ─────────────────────────────────────────────
'  NOTAS GENERALES
' ─────────────────────────────────────────────

note bottom of videos
  deletion_date = finished_at + 30 dias
  CHECK: deletion_date > created_at
  UNIQUE (experiment_id, day):
  max 1 video por dia (RN-03)
end note

note bottom of jobs
  stage + progress_pct alimentan
  la barra de progreso (RF-15).
  config_id -> reproducibilidad.
end note

note right of users
  password_hash: bcrypt con sal (RNF-05)
  must_change_password: contrasena
  temporal del Admin (RF-05)
end note

@enduml
